fairway-sf/force-app/main/default/objects/Session_Participant__c/Session_Participant__c.object-meta.xml
<CustomObject>
    <label>Session Participant</label>
    <pluralLabel>Session Participants</pluralLabel>
    <description>The bridge between a simulator's temporary player slot and a permanent Golfer Profile. Every shot, hole result, and game result attributes back to a golfer through this object.</description>
    <nameField>
        <label>Session Participant Name</label>
        <type>AutoNumber</type>
        <displayFormat>SP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>