fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/AI_Coaching_Enabled_For_Session__c.field-meta.xml
<CustomField>
    <fullName>AI_Coaching_Enabled_For_Session__c</fullName>
    <label>AI Coaching Enabled For Session</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>