fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Name as entered into the simulator software for this player slot.</description>
</CustomField>