fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Golf_Session__c.field-meta.xml
<CustomField>
    <fullName>Golf_Session__c</fullName>
    <label>Golf Session</label>
    <type>Lookup</type>
    <referenceTo>Golf_Session__c</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <relationshipLabel>Session Participants</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>