fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Golfer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Golfer_Profile__c</fullName>
    <label>Golfer Profile</label>
    <type>Lookup</type>
    <referenceTo>Golfer_Profile__c</referenceTo>
    <relationshipName>Session_Participants</relationshipName>
    <relationshipLabel>Session Participants</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Blank for anonymous guests who don't have a Golfer Profile.</description>
</CustomField>