fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Guest_Flag__c.field-meta.xml
<CustomField>
    <fullName>Guest_Flag__c</fullName>
    <label>Guest</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>