fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Handicap_At_Time_Of_Play__c.field-meta.xml
<CustomField>
    <fullName>Handicap_At_Time_Of_Play__c</fullName>
    <label>Handicap At Time Of Play</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>