fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Is_Primary_Booker__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Booker__c</fullName>
    <label>Is Primary Booker</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>