fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Simulator_Player_Slot__c.field-meta.xml
<CustomField>
    <fullName>Simulator_Player_Slot__c</fullName>
    <label>Simulator Player Slot</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
    <description>The local player slot number (1-4) as known by the simulator software. This is the join key every incoming shot uses to find this participant.</description>
</CustomField>