fairway-sf/force-app/main/default/objects/Session_Participant__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <description>Used for team game formats like Wolf/Vegas/Stableball. Blank for practice and individual play.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Team A</fullName><default>false</default><label>Team A</label></value>
            <value><fullName>Team B</fullName><default>false</default><label>Team B</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>